--- a/settings.env.sample
+++ b/settings.env.sample
@@ -1,11 +1,22 @@
 # Example configuration.
 
 # To let the URL shortener listen on example.com/, uncomment the following
-# lines:
+# line:
 #SERVER_NAME=example.com
-
 
 # It is also possible to prefix the URL path. For instance, by uncommenting the
 # following lines the shortener will listen on example.com/shortener/ :
 #SERVER_NAME=example.com
 #BASE_URL=/shortener
+
+
+# If running through docker, the following lines set the UID and GID of the
+# user running the webserver.
+#PUID=0
+#PGID=0
+
+# By default the database is saved in the file app.db in the application
+# directory.
+# In order to save the database file in a non-default location, uncomment and
+# edit the following line:
+#DATABASE_PATH=/tmp/app.db
