Fix proxy http(s) protocol detection

--- a/settings.env.sample
+++ b/settings.env.sample
@@ -20,3 +20,7 @@
 # In order to save the database file in a non-default location, uncomment and
 # edit the following line:
 #DATABASE_PATH=/tmp/app.db
+
+# If running this application behind a reverse proxy, set the following
+# variable to the number of used reverse proxies (usually 1).
+#PROXY_DEPTH=0
