--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Flask-SQLAlchemy
-flask-login
-flask-migrate
-Flask-WTF
-python-dotenv
+Flask ~= 2.1
+Flask-SQLAlchemy ~= 2.5
+flask-login ~= 0.6
+flask-migrate ~= 3.1
+Flask-WTF ~= 1.0
+python-dotenv ~= 0.20
